[gd_scene load_steps=3 format=3 uid="uid://vyora1hxpbx8"]

[ext_resource type="Texture2D" uid="uid://bky6crxwku6u4" path="res://icon.svg" id="1_7cjq7"]
[ext_resource type="Script" path="res://game/ui/unit_button.gd" id="3_5dfub"]

[node name="UnitButton" type="TextureButton"]
custom_minimum_size = Vector2(100, 100)
texture_normal = ExtResource("1_7cjq7")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_5dfub")

[node name="AmountLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 3.0
offset_right = -8.0
offset_bottom = 26.0
grow_horizontal = 0
text = "1"
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
